--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/DanielSchranc/angularjs-webpack-boilerplate#readme",
   "scripts": {
-    "prestart": "webpack --config vendor/webpack.config.js",
-    "start": "webpack-dev-server"
+    "build": "cross-env NODE_ENV=production webpack -p",
+    "build:dev": "cross-env NODE_ENV=dev webpack-dev-server",
+    "build:prod": "npm run clean && npm run build",
+    "clean": "rimraf build",
+    "start": "npm run build:dev"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.11",
     "angular": "^1.6.7",
-    "@uirouter/angularjs": "^1.0.11"
+    "angular-loading-bar": "^0.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
@@ -33,13 +37,15 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-1": "^6.16.0",
-    "copy-webpack-plugin": "4.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.12.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.7.1",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
     "node-libs-browser": "2.0.0",
     "node-sass": "^4.7.2",
     "null-loader": "^0.1.1",
