--- a/package.json
+++ b/package.json
@@ -24,19 +24,20 @@
     "start": "npm run build:dev"
   },
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.11",
-    "angular": "^1.6.7",
+    "@uirouter/angularjs": "^1.0.20",
+    "angular": "^1.7.3",
     "angular-loading-bar": "^0.9.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.17.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-angularjs-annotate": "^0.7.0",
-    "babel-plugin-lodash": "^3.2.11",
+    "babel-loader": "^8.0.0-beta.3",
+    "babel-plugin-angularjs-annotate": "^0.9.0",
+    "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-1": "^6.16.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.4",
