--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
   "extends": "airbnb-base",
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
   "rules": {
     "import/prefer-default-export": "off",
     "comma-dangle": "off",
