--- a/package.json
+++ b/package.json
@@ -18,44 +18,46 @@
   "homepage": "https://github.com/DanielSchranc/angularjs-webpack-boilerplate#readme",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack -p",
-    "build:dev": "cross-env NODE_ENV=dev webpack-dev-server",
+    "build:dev": "cross-env NODE_ENV=development webpack-dev-server",
     "build:prod": "npm run clean && npm run build",
     "clean": "rimraf build",
     "start": "npm run build:dev"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
+    "@babel/runtime-corejs2": "^7.0.0",
     "@uirouter/angularjs": "^1.0.20",
     "angular": "^1.7.3",
-    "angular-loading-bar": "^0.9.0"
+    "angular-loading-bar": "^0.9.0",
+    "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "autoprefixer": "^7.1.1",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^8.0.0-beta.3",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.2",
     "babel-plugin-angularjs-annotate": "^0.9.0",
-    "babel-plugin-lodash": "^3.3.2",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.12.1",
+    "babel-plugin-lodash": "^3.3.4",
+    "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "node-libs-browser": "2.0.0",
-    "node-sass": "^4.7.2",
+    "eslint-plugin-import": "^2.7.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "node-libs-browser": "2.1.0",
+    "node-sass": "^4.9.3",
     "null-loader": "^0.1.1",
-    "postcss-loader": "1.2.2",
+    "postcss-loader": "3.0.0",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "2.2.0",
-    "webpack-dev-server": "2.2.0"
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.17.2",
+    "webpack-dev-server": "^3.1.8"
   }
 }
